--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   firebase_core: ^3.13.1
   retrofit: ^4.4.2
   json_annotation: ^4.9.0
+  cached_network_image: ^3.4.1
+  flutter_advanced_drawer: ^1.5.0
 
 dev_dependencies:
   flutter_test:
