--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   json_annotation: ^4.9.0
   cached_network_image: ^3.4.1
   flutter_advanced_drawer: ^1.5.0
+  image_picker: ^1.1.2
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
