--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   json_annotation: ^4.9.0
   cached_network_image: ^3.4.1
   flutter_advanced_drawer: ^1.5.0
+  hijri: ^3.0.0
+  infinite_carousel: ^1.1.1
 
 dev_dependencies:
   flutter_test:
