--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   infinite_scroll_pagination: ^5.0.0
   firebase_messaging: ^15.2.7
   flutter_local_notifications: ^18.0.1
+  google_sign_in: ^6.3.0
+  firebase_auth: ^5.6.0
 
 dev_dependencies:
   flutter_test:
