--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   google_sign_in: ^6.3.0
   firebase_auth: ^5.6.0
+  audioplayers: ^6.5.0
 
 dev_dependencies:
   flutter_test:
