--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   google_sign_in: ^6.3.0
   firebase_auth: ^5.6.0
   audioplayers: ^6.5.0
+  connectivity_plus: ^6.1.4
 
 dev_dependencies:
   flutter_test:
