--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,7 +73,12 @@ dev_dependencies:
   build_runner: ^2.4.15
   retrofit_generator: ^9.2.0
   json_serializable: ^6.9.5
-  flutter_launcher_icons: ^0.14.3
+  flutter_launcher_icons: ^0.14.4
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/app-icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
