--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <application
-        android:label="path_to_water"
+        android:label="Barakah Builder"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
