--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,23 +3,23 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>715238618476-tlfeoumv507igero0r6bdtqe6lgqu77k.apps.googleusercontent.com</string>
+	<string>668101359977-gqs8ft83kfphveghedgbbbuko2ft3ngf.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.715238618476-tlfeoumv507igero0r6bdtqe6lgqu77k</string>
+	<string>com.googleusercontent.apps.668101359977-gqs8ft83kfphveghedgbbbuko2ft3ngf</string>
 	<key>ANDROID_CLIENT_ID</key>
-	<string>715238618476-6g0g4r7bknjsostnqhrh6qgnut5huv2u.apps.googleusercontent.com</string>
+	<string>668101359977-ns5bgjmgsjjihpdqsa6lmtqpcgihs6db.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyD1xh6EHlWLqaMzPWaFBx3_aMyS-zqmn30</string>
+	<string>AIzaSyClG9UKkAVuODDmQJjAKXDdsK6R2OiGLjQ</string>
 	<key>GCM_SENDER_ID</key>
-	<string>715238618476</string>
+	<string>668101359977</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.pathToWater</string>
+	<string>com.futurbyte.barakahbuilder</string>
 	<key>PROJECT_ID</key>
-	<string>islamic-mobile-app</string>
+	<string>barakah-builder-8bf98</string>
 	<key>STORAGE_BUCKET</key>
-	<string>islamic-mobile-app.firebasestorage.app</string>
+	<string>barakah-builder-8bf98.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -31,6 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:715238618476:ios:bf9af979d744553d7b6f49</string>
+	<string>1:668101359977:ios:ffdb9159fc5cecb55165f8</string>
 </dict>
 </plist>
