--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dev_dependencies:
   retrofit_generator: ^9.2.0
   json_serializable: ^6.9.5
   flutter_launcher_icons: ^0.14.4
+  change_app_package_name: ^1.5.0
 
 flutter_launcher_icons:
   android: "launcher_icon"
