feat: sign in added

--- a/firebase.json
+++ b/firebase.json
@@ -1,30 +1,1 @@
-{
-  "flutter": {
-    "platforms": {
-      "android": {
-        "default": {
-          "projectId": "barakah-builder-8bf98",
-          "appId": "1:668101359977:android:825e483a18d4ece15165f8",
-          "fileOutput": "android/app/google-services.json"
-        }
-      },
-      "ios": {
-        "default": {
-          "projectId": "barakah-builder-8bf98",
-          "appId": "1:668101359977:ios:ffdb9159fc5cecb55165f8",
-          "uploadDebugSymbols": false,
-          "fileOutput": "ios/Runner/GoogleService-Info.plist"
-        }
-      },
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "barakah-builder-8bf98",
-          "configurations": {
-            "android": "1:668101359977:android:825e483a18d4ece15165f8",
-            "ios": "1:668101359977:ios:ffdb9159fc5cecb55165f8"
-          }
-        }
-      }
-    }
-  }
-}
+{"flutter":{"platforms":{"android":{"default":{"projectId":"barakah-builder","appId":"1:1056416408417:android:a1c42ef2b8596074585b20","fileOutput":"android/app/google-services.json"}},"ios":{"default":{"projectId":"barakah-builder","appId":"1:1056416408417:ios:f2cb79a62de7ff25585b20","uploadDebugSymbols":false,"fileOutput":"ios/Runner/GoogleService-Info.plist"}},"dart":{"lib/firebase_options.dart":{"projectId":"barakah-builder","configurations":{"android":"1:1056416408417:android:a1c42ef2b8596074585b20","ios":"1:1056416408417:ios:f2cb79a62de7ff25585b20"}}}}}}
