--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   firebase_auth: ^5.6.0
   audioplayers: ^6.5.0
   connectivity_plus: ^6.1.4
+  sign_in_with_apple: ^7.0.1
 
 dev_dependencies:
   flutter_test:
