--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   audioplayers: ^6.5.0
   connectivity_plus: ^6.1.4
   sign_in_with_apple: ^7.0.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -128,6 +129,9 @@ flutter:
           weight: 300
         - asset: assets/fonts/Poppins-Light.ttf
           weight: 200
+    - family: NotoSans
+      fonts:
+        - asset: assets/fonts/Noto-Regular.ttf
 
   #
   # For details regarding fonts from package dependencies,
