--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   connectivity_plus: ^6.1.4
   sign_in_with_apple: ^7.0.1
   google_fonts: ^6.2.1
+  # app_badge_plus: ^1.2.3
+  
 
 dev_dependencies:
   flutter_test:
